syntax = "proto3";
package friend;
option go_package = "./pb";

message FriendApplication {
  int64 userID = 1;
  string account = 2;
  string nickName = 3;
  int64 timestamp = 4;
  string message = 5;
}

message AddFriendRequest{
  int64 userID = 1;
  int64 targetUser = 2;
  string message = 3;
}

message AddFriendResponse{
  int32 code = 1;
  string message = 2;
}

message ListAddFriendRequest {
  int64 userID = 1;
}

message ListAddFriendResponse {
  int32 code = 1;
  string message = 2;
  repeated FriendApplication applications = 3;
}

message AcceptFriendRequest {
  int64 userID = 1;
  int64 targetID = 2;
}

message AcceptFriendResponse {
  int32 code = 1;
  string message = 2;
}

// Friend 好友相关的RPC服务
service Friend {
  // AddFriend  添加好友
  rpc AddFriend(AddFriendRequest) returns (AddFriendResponse) {}
  // ListAddFriendRequests  列出添加好友请求
  rpc ListAddFriendRequests(ListAddFriendRequest) returns (ListAddFriendResponse) {}
  // AcceptFriend  接收添加好友请求
  rpc AcceptFriend(AcceptFriendRequest) returns (AcceptFriendResponse) {}
}